# cpp-dispatch-queue

./: .editorconfig  CMakeLists.txt  Doxyfile  README.md  dispatch_queue.cpp  dispatch_queue.hpp
docs/: annotated.html  annotated_dup.js  classdispatch__queue_1_1detail_1_1pending__task__queue-members.html  classdispatch__queue_1_1detail_1_1pending__task__queue.html  classdispatch__queue_1_1detail_1_1promise-members.html  classdispatch__queue_1_1detail_1_1promise.html  classdispatch__queue_1_1detail_1_1promise_3_01void_01_4-members.html  classdispatch__queue_1_1detail_1_1promise_3_01void_01_4.html  classdispatch__queue_1_1detail_1_1task__future-members.html  classdispatch__queue_1_1detail_1_1task__future.html  classdispatch__queue_1_1detail_1_1task__future_3_01void_01_4-members.html  classdispatch__queue_1_1detail_1_1task__future_3_01void_01_4.html  classdispatch__queue_1_1detail_1_1task__future__base-members.html  classdispatch__queue_1_1detail_1_1task__future__base.html  classdispatch__queue_1_1detail_1_1task__future__base.js  classdispatch__queue_1_1detail_1_1worker__pool-members.html  classdispatch__queue_1_1detail_1_1worker__pool.html  classdispatch__queue_1_1dispatch__queue-members.html  classdispatch__queue_1_1dispatch__queue.html  classdispatch__queue_1_1dispatch__queue.js  classdispatch__queue_1_1task-members.html  classdispatch__queue_1_1task.html  classdispatch__queue_1_1task.js  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  dispatch__queue_8cpp_source.html  dispatch__queue_8hpp_source.html  doxygen_crawl.html  files.html  function__result_8hpp_source.html  functions.html  functions_func.html  hierarchy.html  hierarchy.js  index.html  is__instance__of_8hpp_source.html  navtreedata.js  (+13 more)
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  (+18 more)
include/: dispatch_queue.hpp  function_result.hpp  is_instance_of.hpp  pending_task.hpp  pending_task_queue.hpp  promise.hpp  task.hpp  task_future.hpp  worker_pool.hpp
src/: dispatch_queue-one.cpp  dispatch_queue.cpp  pending_task_queue.cpp  worker_pool.cpp
test/: CMakeLists.txt  benchmark.cpp  test.cpp
